syntax = "proto3";

package auth;

option go_package = "proto/auth";

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message TokenRequest {
  string access_token = 1;
}

message TokenResponse {
  bool valid = 1;
  string user_id = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}